# DB_migration

./: .env  .gitignore  README.md
go/: .env  go.mod
go/src/: main.go
go/src/app/: hanlder.go
go/src/app/dblayer/: queries.go
go/src/database/: database.go
python/: .env  pyproject.toml
python/src/: main.py
python/src/configs/: config.py
python/src/models/: ms_my_model.py  ms_post_model.py
python/src/queries/: query.py
python/src/services/: service.py
rust/src/: main.rs
rust/src/models/: mod.rs  ms_my_model.rs
src/: main.py
src/configs/: config.py
src/models/: ms_my_model.py
src/queries/: query.py
src/services/: service.py
