[tool.poetry]
name = "migration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
pymssql = "^2.3.1"
SQLAlchemy = "^2.0.36"
PyMySQL = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
